add svg format icons

--- a/core/coreImage.qrc
+++ b/core/coreImage.qrc
@@ -50,5 +50,34 @@
         <file>resource/image/language/fsharp.png</file>
         <file>resource/image/language/typescript.png</file>
         <file>resource/image/language/vb.png</file>
+        <file>resource/image/language/ada-black.svg</file>
+        <file>resource/image/language/ada-white.svg</file>
+        <file>resource/image/language/c.svg</file>
+        <file>resource/image/language/c++.svg</file>
+        <file>resource/image/language/carbon.svg</file>
+        <file>resource/image/language/circt.svg</file>
+        <file>resource/image/language/crystal.svg</file>
+        <file>resource/image/language/cuda.svg</file>
+        <file>resource/image/language/d.svg</file>
+        <file>resource/image/language/dart.svg</file>
+        <file>resource/image/language/erlang.svg</file>
+        <file>resource/image/language/fortran.svg</file>
+        <file>resource/image/language/fsharp.svg</file>
+        <file>resource/image/language/go.svg</file>
+        <file>resource/image/language/java.svg</file>
+        <file>resource/image/language/mlir.svg</file>
+        <file>resource/image/language/nim.svg</file>
+        <file>resource/image/language/ocaml.svg</file>
+        <file>resource/image/language/openclc.svg</file>
+        <file>resource/image/language/pascal.svg</file>
+        <file>resource/image/language/pony.svg</file>
+        <file>resource/image/language/python.svg</file>
+        <file>resource/image/language/ruby.svg</file>
+        <file>resource/image/language/rust-black.svg</file>
+        <file>resource/image/language/rust-white.svg</file>
+        <file>resource/image/language/solidity.svg</file>
+        <file>resource/image/language/swift.svg</file>
+        <file>resource/image/language/typescript.svg</file>
+        <file>resource/image/language/zig.svg</file>
     </qresource>
 </RCC>
